# jellyfin_client

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: public_info.rs
src/: error.rs  lib.rs
src/api/system/: mod.rs  public_info.rs
src/client/: builder.rs  inner.rs  mod.rs
src/models/system/: mod.rs  public_info.rs
