[package]
name = "jellyfin_client"
version = "12.0.0"
edition = "2024"

[lib]
name = "jellyfin_client"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
